# compact_str

./: Cargo.toml
compact_str/: Cargo.toml
compact_str/src/: lib.rs  tests.rs
compact_str/src/repr/: inline.rs  mod.rs  static_str.rs
