[workspace]
members = [
    "bench",
    "examples/bytes",
    "examples/diesel",
    "examples/macros",
    "examples/serde",
    "examples/sqlx",
    "examples/traits",
    "fuzz",
]
exclude = ["compact_str"]

resolver = "2"

[patch.crates-io]
castaway = { git = "https://github.com/shintakezou/castaway", branch = "master" }

